feat: start shop-mobile and carrier apps with pm2

--- a/carrier/mobile-ionic/.env.template
+++ b/carrier/mobile-ionic/.env.template
@@ -36,3 +36,7 @@ HTTPS_SERVICES_ENDPOINT=https://localhost:5501
 # For maintenance micro service. Ever maintanance API URL: https://maintenance.ever.co/status
 SETTINGS_APP_TYPE=carrier-mobile
 SETTINGS_MAINTENANCE_API_URL=
+
+PORT=4203
+WEB_MEMORY=4096
+WEB_CONCURRENCY=1
