--- a/carrier/mobile-ionic/package.json
+++ b/carrier/mobile-ionic/package.json
@@ -37,6 +37,8 @@
 		"config:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config -- --environment=prod",
 		"start": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn run build && yarn ng serve --port 4203",
 		"start:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && yarn run build:prod && yarn ng serve --port 4203 --prod",
+		"start:server:pm2": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn tsc && node --harmony app.js",
+		"start:server:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && node --harmony ./pm2bootstrap.js",
 		"build": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn ng build",
 		"build:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && yarn ng build --prod --stats-json",
 		"test": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn ng test",
@@ -144,6 +146,7 @@
 		"neo-async": "^2.6.1",
 		"node-sass": "^4.11.0",
 		"phonegap-plugin-barcodescanner": "^8.0.1",
+		"pm2": "^4.2.1",
 		"qrcode": "^1.4.1",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.5.2",
