--- a/shop/mobile-ionic/.env.template
+++ b/shop/mobile-ionic/.env.template
@@ -70,3 +70,7 @@ SETTINGS_MAINTENANCE_API_URL=
 
 # For "single" merchant (multiple branches)
 MERCHANT_IDS=[]
+
+PORT=4201
+WEB_MEMORY=4096
+WEB_CONCURRENCY=1
