feat: run admin with pm2

--- a/admin/website-angular/package.json
+++ b/admin/website-angular/package.json
@@ -41,6 +41,8 @@
 		"config:dev": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config -- --environment=dev",
 		"config:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config -- --environment=prod",
 		"start": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && ng serve",
+		"start:server:pm2": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn tsc && node --harmony app.js",
+		"start:server:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && node --harmony ./pm2bootstrap.js",
 		"build": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && ng build",
 		"build:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && yarn run build -- --prod --aot",
 		"test": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && ng test",
@@ -132,6 +134,7 @@
 		"node-sass": "^4.12.0",
 		"normalize.css": "^8.0.1",
 		"pace-js": "1.0.2",
+		"pm2": "^4.2.1",
 		"popper.js": "^1.15.0",
 		"qrcode": "^1.4.1",
 		"reflect-metadata": "^0.1.13",
