--- a/admin/website-angular/.env.template
+++ b/admin/website-angular/.env.template
@@ -36,3 +36,7 @@ CURRENCY_SYMBOL=$
 # For maintenance micro service. Ever maintanance API URL: https://maintenance.ever.co/status
 SETTINGS_APP_TYPE=admin
 SETTINGS_MAINTENANCE_API_URL=
+
+PORT=4200
+WEB_MEMORY=4096
+WEB_CONCURRENCY=1
