--- a/shop/website-angular/.env.template
+++ b/shop/website-angular/.env.template
@@ -24,3 +24,8 @@ DELIVERY_TIME_MAX=60
 # For maintenance micro service. Ever maintanance API URL: https://maintenance.ever.co/status
 SETTINGS_APP_TYPE=shop-web
 SETTINGS_MAINTENANCE_API_URL=
+
+PORT=3000
+WEB_MEMORY=4096
+WEB_CONCURRENCY=1
+
