--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -40,6 +40,8 @@
 		"build:docker": "yarn run build:prod && docker build -t angular-webpack-starter:latest .",
 		"build:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && yarn rimraf dist && yarn run webpack -- --config config/webpack.prod.js --progress --profile --bail",
 		"build": "yarn run build:dev",
+		"start:server:pm2": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn tsc && node --harmony ./dist/out-tsc/app.js",
+		"start:server:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && node --harmony ./dist/out-tsc/pm2bootstrap.js",
 		"ci:aot": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 BUILD_E2E=1 yarn run config:prod && yarn run lint && yarn run test:ci && yarn run build:aot && yarn run e2e",
 		"ci:jit": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 BUILD_E2E=1 yarn run config:prod && yarn run lint && yarn run test:ci && yarn run build:prod && yarn run e2e",
 		"ci:nobuild": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn run lint && yarn test:ci && yarn run e2e",
@@ -155,6 +157,7 @@
 		"ngx-hm-carousel": "^1.6.5-bata.1",
 		"ngx-infinite-scroll": "^7.0.1",
 		"ngx-toastr": "^10.0.4",
+		"pm2": "^4.2.1",
 		"raw-loader": "1.0.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^6.5.2",
