feat: new fixing over ever-shop-web

--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -30,6 +30,8 @@
 		}
 	],
 	"scripts": {
+		"ng:dev": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn ng",
+		"ng:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn ng",
 		"config": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn ts-node ./scripts/configure.ts",
 		"config:dev": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config -- --environment=dev",
 		"config:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config -- --environment=prod",
@@ -38,10 +40,11 @@
 		"build:aot:dev": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 BUILD_AOT=1 yarn run build:dev",
 		"build:dev": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn rimraf dist && yarn run webpack -- --config config/webpack.dev.js --mode development --progress --profile --trace-deprecation",
 		"build:docker": "yarn run build:prod && docker build -t angular-webpack-starter:latest .",
-		"build:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && yarn rimraf dist && yarn run webpack -- --config config/webpack.prod.js --progress --profile --bail",
-		"build": "yarn run build:dev",
-		"start:server:pm2": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn tsc && node --harmony ./dist/out-tsc/app.js",
-		"start:server:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && node --harmony ./dist/out-tsc/pm2bootstrap.js",
+		"build:prod:webpack": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && yarn rimraf dist && yarn run webpack -- --config config/webpack.prod.js --progress --profile --bail && yarn tsc",
+		"build": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn ng:dev build && yarn tsc",
+		"build:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && yarn ng:prod build --prod --aot=false --build-optimizer=false && yarn tsc",
+		"start:server:prod": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run build:prod && node --harmony ./dist/out-tsc/app.js",
+		"start:server:pm2": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run build:prod:webpack && node --harmony ./dist/out-tsc/pm2bootstrap.js",
 		"ci:aot": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 BUILD_E2E=1 yarn run config:prod && yarn run lint && yarn run test:ci && yarn run build:aot && yarn run e2e",
 		"ci:jit": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 BUILD_E2E=1 yarn run config:prod && yarn run lint && yarn run test:ci && yarn run build:prod && yarn run e2e",
 		"ci:nobuild": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn run lint && yarn test:ci && yarn run e2e",
