--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -43,7 +43,7 @@
 		"build:prod:webpack": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && yarn rimraf dist && yarn run webpack -- --config config/webpack.prod.js --progress --profile --bail && yarn tsc",
 		"build": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn ng:dev build && yarn tsc",
 		"build:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && yarn ng:prod build --prod --aot=false --build-optimizer=false && yarn tsc",
-		"start:server:prod": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run build:prod && node --harmony ./dist/out-tsc/app.js",
+		"start:server:prod": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run build:prod:webpack && node --harmony ./dist/out-tsc/app.js",
 		"start:server:pm2": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run build:prod:webpack && node --harmony ./dist/out-tsc/pm2bootstrap.js",
 		"ci:aot": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 BUILD_E2E=1 yarn run config:prod && yarn run lint && yarn run test:ci && yarn run build:aot && yarn run e2e",
 		"ci:jit": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 BUILD_E2E=1 yarn run config:prod && yarn run lint && yarn run test:ci && yarn run build:prod && yarn run e2e",
