--- a/merchant/tablet-ionic/tsconfig.json
+++ b/merchant/tablet-ionic/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compileOnSave": false,
 	"compilerOptions": {
+		"outDir": "./www/out-tsc",
 		"sourceMap": true,
 		"declaration": false,
 		"moduleResolution": "node",
