--- a/merchant/tablet-ionic/.env.template
+++ b/merchant/tablet-ionic/.env.template
@@ -39,6 +39,8 @@ MAP_USER_ICON_LINK=http://maps.google.com/mapfiles/kml/pal3/icon48.png
 
 MAP_CARRIER_ICON_LINK=http://maps.google.com/mapfiles/kml/pal4/icon54.png
 
+DEFAULT_LANGUAGE=
+
 # For maintenance micro service. Ever maintanance API URL: https://maintenance.ever.co/status
 SETTINGS_APP_TYPE=merchant-tablet
 SETTINGS_MAINTENANCE_API_URL=
