feat: fixed small bugs

--- a/carrier/mobile-ionic/.env.template
+++ b/carrier/mobile-ionic/.env.template
@@ -27,6 +27,8 @@ DEFAULT_LOGIN_PASSWORD=changeme
 DEFAULT_LATITUDE=42.6459136
 DEFAULT_LONGITUDE=23.3932736
 
+DEFAULT_LANGUAGE=en
+
 # Graphql endpoints for apollo services
 GQL_ENDPOINT=http://localhost:5555/graphql
 GQL_SUBSCRIPTIONS_ENDPOINT=ws://localhost:5050/subscriptions
