--- a/shop/website-angular/package.json
+++ b/shop/website-angular/package.json
@@ -170,6 +170,7 @@
 		"sass-extract-loader": "^1.1.0",
 		"socket.io-client": "^2.2.0",
 		"stripe": "^7.0.0",
+		"terser-webpack-plugin": "^2.3.5",
 		"uglify-js": "^3.6.0",
 		"uuid": "^3.3.2",
 		"web-animations-js": "^2.3.1",
