fix: multiple fixes related to default language

--- a/admin/website-angular/.env.template
+++ b/admin/website-angular/.env.template
@@ -33,7 +33,7 @@ GENERATE_PASSWORD_CHARSET=abcdefghijklnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ012
 
 CURRENCY_SYMBOL=$
 
-DEFAULT_LANGUAGE = 'en'
+DEFAULT_LANGUAGE=en
 
 # For maintenance micro service. Ever maintanance API URL: https://maintenance.ever.co/status
 SETTINGS_APP_TYPE=admin
