--- a/shop/mobile-ionic/.env.template
+++ b/shop/mobile-ionic/.env.template
@@ -27,7 +27,7 @@ FAKE_UUID=
 # Not secret MixPanel Token
 MIXPANEL_API_KEY=
 
-DEFAULT_LANGUAGE=en
+DEFAULT_LANGUAGE=en-US
 DEFAULT_LOCALE=en-US
 
 DELIVERY_TIME_MIN=30
