--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,5 +65,12 @@
 	],
 	"git.ignoreLimitWarning": true,
 	"vsicons.presets.nestjs": true,
-	"cSpell.words": ["envalid", "esnext", "inversify", "pyro", "typeorm"]
+	"cSpell.words": [
+		"envalid",
+		"esnext",
+		"inversify",
+		"pyro",
+		"snyk",
+		"typeorm"
+	]
 }
