--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -53,17 +53,17 @@
 	"dependencies": {
 		"@captemulation/get-parameter-names": "^1.3.0",
 		"@ever-platform/common": "file:../common",
-		"@nestjs/common": "^6.3.2",
-		"@nestjs/core": "^6.5.3",
+		"@nestjs/common": "^7.0.9",
+		"@nestjs/core": "^7.0.9",
 		"@nestjs/cqrs": "^6.0.0",
-		"@nestjs/graphql": "^6.4.2",
-		"@nestjs/microservices": "^6.3.2",
-		"@nestjs/passport": "^6.1.0",
-		"@nestjs/platform-express": "^6.3.2",
-		"@nestjs/platform-socket.io": "^6.3.2",
-		"@nestjs/swagger": "^3.0.2",
-		"@nestjs/typeorm": "^6.1.2",
-		"@nestjs/websockets": "^6.3.2",
+		"@nestjs/graphql": "^7.3.7",
+		"@nestjs/microservices": "^7.0.9",
+		"@nestjs/passport": "^7.0.0",
+		"@nestjs/platform-express": "^7.0.9",
+		"@nestjs/platform-socket.io": "^7.0.9",
+		"@nestjs/swagger": "^4.5.4",
+		"@nestjs/typeorm": "^7.0.0",
+		"@nestjs/websockets": "^7.0.9",
 		"apollo-server-express": "^2.8.0",
 		"axios": "^0.19.0",
 		"bcrypt": "^3.0.6",
@@ -135,7 +135,7 @@
 		"source-map-support": "^0.5.12",
 		"stripe": "^7.2.0",
 		"subscriptions-transport-ws": "^0.9.16",
-		"swagger-ui-express": "^4.0.6",
+		"swagger-ui-express": "^4.1.4",
 		"symbol": "^0.3.1",
 		"symbol-observable": "^1.2.0",
 		"typeorm": "^0.2.18",
@@ -148,6 +148,43 @@
 	},
 	"devDependencies": {
 		"@types/node": "12.11.1",
+		"@types/bcrypt": "^3.0.0",
+		"@types/bluebird": "^3.5.30",
+		"@types/body-parser": "^1.17.0",
+		"@types/bunyan": "^1.8.6",
+		"@types/bunyan-prettystream": "0.1.31",
+		"@types/core-decorators": "^0.20.0",
+		"@types/cors": "^2.8.5",
+		"@types/errorhandler": "^0.0.32",
+		"@types/express": "^4.17.3",
+		"@types/faker": "^4.1.11",
+		"@types/form-data": "^2.2.1",
+		"@types/google-maps": "^3.2.1",
+		"@types/googlemaps": "^3.30.16",
+		"@types/graphql": "^14.0.7",
+		"@types/handlebars": "^4.1.0",
+		"@types/inversify": "^2.0.33",
+		"@types/jest": "^24.0.15",
+		"@types/jsonwebtoken": "^8.3.2",
+		"@types/lodash": "^4.14.149",
+		"@types/method-override": "^0.0.31",
+		"@types/mkdirp": "^0.5.2",
+		"@types/moment": "^2.13.0",
+		"@types/mongodb": "^3.3.11",
+		"@types/mongoose": "^5.5.32",
+		"@types/passport": "^1.0.3",
+		"@types/passport-jwt": "^3.0.1",
+		"@types/redis": "^2.8.13",
+		"@types/reflect-metadata": "^0.1.0",
+		"@types/request": "^2.48.1",
+		"@types/request-promise": "^4.1.46",
+		"@types/sinon": "^7.0.13",
+		"@types/socket.io": "^2.1.4",
+		"@types/socket.io-client": "^1.4.32",
+		"@types/uuid": "^3.4.4",
+		"@types/source-map-support": "^0.5.0",
+		"@types/stripe": "^7.13.9",
+		"@types/ws": "^6.0.1",
 		"ts-node": "~8.3.0",
 		"tslint": "^6.1.1",
 		"typescript": "~3.7.5"
