--- a/packages/admin-web-angular/package.json
+++ b/packages/admin-web-angular/package.json
@@ -157,12 +157,24 @@
 		"zone.js": "~0.10.2"
 	},
 	"devDependencies": {
+		"@angular-builders/custom-webpack": "^9.1.0",
+		"@angular-devkit/architect": "^0.901.1",
+		"@angular-devkit/build-optimizer": "^0.901.1",
+		"@angular-devkit/build-webpack": "^0.901.1",
+		"@angular-devkit/core": "^9.1.1",
+		"@angular-devkit/schematics": "^9.1.1",
 		"@angular-devkit/build-angular": "~0.900.7",
 		"@angular/cli": "~9.0.4",
 		"@angular/compiler-cli": "~9.0.3",
 		"@types/node": "^12.11.1",
 		"@types/jasmine": "~3.5.0",
 		"@types/jasminewd2": "~2.0.3",
+		"@storybook/addon-actions": "^5.3.17",
+		"@storybook/addon-knobs": "^5.3.17",
+		"@storybook/addon-links": "^5.3.17",
+		"@storybook/addon-notes": "^5.3.17",
+		"@storybook/addons": "^5.3.17",
+		"@storybook/angular": "^5.3.17",
 		"codelyzer": "^5.1.2",
 		"jasmine-core": "~3.5.0",
 		"jasmine-spec-reporter": "~4.2.1",
