--- a/packages/shop-web-angular/package.json
+++ b/packages/shop-web-angular/package.json
@@ -176,12 +176,14 @@
 		"zone.js": "~0.10.2"
 	},
 	"devDependencies": {
+		"@angular-devkit/build-optimizer": "^0.901.1",
 		"@angular-devkit/build-angular": "^0.901.1",
 		"@angular/cli": "^9.1.1",
 		"@angular/compiler-cli": "^9.1.1",
 		"@types/node": "^12.11.1",
 		"@types/jasmine": "~3.5.0",
 		"@types/jasminewd2": "~2.0.3",
+		"@ngtools/webpack": "^9.1.0",
 		"codelyzer": "^5.1.2",
 		"jasmine-core": "~3.5.0",
 		"jasmine-spec-reporter": "~4.2.1",
