--- a/packages/admin-web-angular/tsconfig.spec.json
+++ b/packages/admin-web-angular/tsconfig.spec.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"baseUrl": "./src",
 		"outDir": "./build",
-		"rootDir": "./src",
+		"rootDir": "./",
 		"target": "es5",
 		"types": ["node", "reflect-metadata", "googlemaps", "jasmine"],
 		"paths": {
@@ -13,8 +13,8 @@
 			"@pyro/*": ["../../common/src/@pyro/*"],
 			"mongoose": ["../../common-angular/src/mongoose-placeholder"],
 			"typeorm": ["../../common-angular/src/typeorm-placeholder"],
-			"angular2-wizard/*": [
-				"../../../node_modules/@ever-co/angular2-wizard/dist/*"
+			"angular2-wizard": [
+				"../node_modules/@ever-co/angular2-wizard/dist/*"
 			],
 			"@app/*": ["app/*"],
 			"environments/*": ["./environments/*"],
