fix: pm2 functionality

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,12 +34,12 @@
 		"precommit": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 lint-staged",
 		"start": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn tsc -p tsconfig.build.json && node build/src/main.js",
 		"start:dev": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 concurrently \"wait-on build/main.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
-		"start:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn -p tsconfig.build.json tsc && node ./build/pm2bootstrap.js",
+		"start:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn -p tsconfig.build.json tsc && node ./build/src/pm2bootstrap.js",
 		"build": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 rimraf build && tsc -p tsconfig.build.json && rimraf dist && yarn webpack",
 		"build:dev": "yarn nest build --webpack",
 		"dev": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn tsc && node ./build/main.js",
 		"test": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 jest",
-		"prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 node ./build/pm2bootstrap.js",
+		"prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 node ./build/src/pm2bootstrap.js",
 		"nestjs": "cross-env NODE_OPTIONS=--max_old_space_size=4096 node ./dist/server",
 		"webpack": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 webpack --config webpack.config.js",
 		"lint": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 tslint -p tsconfig.json -c tslint.json",
