--- a/packages/merchant-tablet-ionic/tsconfig.json
+++ b/packages/merchant-tablet-ionic/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "../../tsconfig.base.json",
 	"compileOnSave": false,
 	"compilerOptions": {
+		"outDir": "./www/out-tsc",
 		"baseUrl": "./src",
 		"target": "es5",
 		"sourceMap": true,
