--- a/packages/shop-web-angular/package.json
+++ b/packages/shop-web-angular/package.json
@@ -44,7 +44,7 @@
 		"build": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn ng:dev build && yarn tsc",
 		"build:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run config:prod && yarn ng:prod build --prod --aot=false --build-optimizer=false && yarn tsc",
 		"start:server:prod": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run build:prod:webpack && node --harmony ./dist/out-tsc/app.js",
-		"start:server:pm2": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run build:prod:webpack && node --harmony ./dist/out-tsc/pm2bootstrap.js",
+		"start:server:pm2": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn run build:prod:webpack && node --harmony ./dist/out-tsc/packages/shop-web-angular/pm2bootstrap.js",
 		"ci:aot": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 BUILD_E2E=1 yarn run config:prod && yarn run lint && yarn run test:ci && yarn run build:aot && yarn run e2e",
 		"ci:jit": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 BUILD_E2E=1 yarn run config:prod && yarn run lint && yarn run test:ci && yarn run build:prod && yarn run e2e",
 		"ci:nobuild": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn run config:dev && yarn run lint && yarn test:ci && yarn run e2e",
@@ -107,18 +107,18 @@
 	"dependencies": {
 		"@agm/core": "^1.1.0",
 		"@angular/animations": "^9.1.1",
+		"@angular/cdk": "^9.1.3",
 		"@angular/common": "^9.1.1",
-		"@angular/language-service": "^9.1.1",
 		"@angular/compiler": "^9.1.1",
 		"@angular/core": "^9.1.1",
 		"@angular/forms": "^9.1.1",
+		"@angular/language-service": "^9.1.1",
+		"@angular/material": "^9.2.0",
 		"@angular/platform-browser": "^9.1.1",
 		"@angular/platform-browser-dynamic": "^9.1.1",
 		"@angular/platform-server": "^9.1.1",
 		"@angular/router": "^9.1.1",
 		"@angular/service-worker": "^9.1.1",
-		"@angular/cdk": "^9.1.3",
-		"@angular/material": "^9.2.0",
 		"@ever-platform/common": "file:../common",
 		"@ever-platform/common-angular": "file:../common-angular",
 		"@fortawesome/angular-fontawesome": "^0.4.0",
@@ -176,14 +176,14 @@
 		"zone.js": "~0.10.2"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-optimizer": "^0.901.1",
 		"@angular-devkit/build-angular": "^0.901.1",
+		"@angular-devkit/build-optimizer": "^0.901.1",
 		"@angular/cli": "^9.1.1",
 		"@angular/compiler-cli": "^9.1.1",
-		"@types/node": "^12.11.1",
+		"@ngtools/webpack": "^9.1.0",
 		"@types/jasmine": "~3.5.0",
 		"@types/jasminewd2": "~2.0.3",
-		"@ngtools/webpack": "^9.1.0",
+		"@types/node": "^12.11.1",
 		"codelyzer": "^5.1.2",
 		"jasmine-core": "~3.5.0",
 		"jasmine-spec-reporter": "~4.2.1",
@@ -195,7 +195,8 @@
 		"protractor": "~5.4.3",
 		"ts-node": "~8.3.0",
 		"tslint": "~5.18.0",
-		"typescript": "~3.7.5"
+		"typescript": "~3.7.5",
+		"webpack-cli": "^3.3.11"
 	},
 	"engines": {
 		"node": ">=10.15.0",
