--- a/package.json
+++ b/package.json
@@ -80,9 +80,9 @@
 		"@types/jasminewd2": "^2.0.6",
 		"@types/leaflet": "^1.5.12",
 		"@types/node": "^10.9.4",
-		"@types/source-map": "^0.5.7",
 		"@types/socket.io": "^2.1.4",
 		"@types/socket.io-client": "^1.4.32",
+		"@types/source-map": "^0.5.7",
 		"@types/swiper": "^4.4.2",
 		"@types/uglify-js": "^3.0.4",
 		"@types/uuid": "^3.4.4",
@@ -115,6 +115,7 @@
 		"envalid": "^5.0.0",
 		"exports-loader": "^0.7.0",
 		"expose-loader": "^0.7.5",
+		"extract-text-webpack-plugin": "^3.0.2",
 		"file-loader": "^4.3.0",
 		"find-root": "^1.1.0",
 		"gh-pages": "^2.0.1",
@@ -189,7 +190,6 @@
 		"webpack": "4.42.1",
 		"webpack-bundle-analyzer": "^3.6.1",
 		"webpack-cli": "^3.3.10",
-		"webpack-command": "^0.5.0",
 		"webpack-dev-middleware": "^3.7.2",
 		"webpack-dev-server": "^3.9.0",
 		"webpack-graphql-loader": "^1.0.2",
