--- a/packages/shop-web-angular/package.json
+++ b/packages/shop-web-angular/package.json
@@ -169,6 +169,7 @@
 		"sass-extract-loader": "^1.1.0",
 		"socket.io-client": "^2.2.0",
 		"stripe": "^7.0.0",
+		"terser-webpack-plugin": "^3.0.1",
 		"tslib": "^1.10.0",
 		"uglify-js": "^3.6.0",
 		"uuid": "^3.3.2",
@@ -195,8 +196,7 @@
 		"protractor": "~5.4.3",
 		"ts-node": "~8.3.0",
 		"tslint": "~5.18.0",
-		"typescript": "~3.7.5",
-		"webpack-cli": "^3.3.11"
+		"typescript": "~3.7.5"
 	},
 	"engines": {
 		"node": ">=10.15.0",
