--- a/packages/admin-web-angular/angular.json
+++ b/packages/admin-web-angular/angular.json
@@ -38,7 +38,8 @@
 							"../../node_modules/angular-tree-component/dist/angular-tree-component.css",
 							"../../node_modules/pace-js/templates/pace-theme-flash.tmpl.css",
 							"../../node_modules/leaflet/dist/leaflet.css",
-							"src/app/@theme/styles/styles.scss"
+							"src/app/@theme/styles/styles.scss",
+							"./node_modules/swiper/css/swiper.css"
 						],
 						"stylePreprocessorOptions": {
 							"includePaths": ["src/app", "src/assets"]
