--- a/packages/admin-web-angular/package.json
+++ b/packages/admin-web-angular/package.json
@@ -134,6 +134,7 @@
 		"ngx-highlightjs": "^2.1.4",
 		"ngx-moment": "^3.4.0",
 		"ngx-translate-multi-http-loader": "^3.0.0",
+		"ngx-useful-swiper": "9.0.3",
 		"node-sass": "^4.12.0",
 		"normalize.css": "^8.0.1",
 		"pace-js": "1.0.2",
@@ -148,6 +149,7 @@
 		"socket.io-client": "^2.2.0",
 		"stripe": "^7.0.0",
 		"subscriptions-transport-ws": "^0.9.16",
+		"swiper": "^5.2.1",
 		"tinymce": "^5.0.4",
 		"tslib": "^1.10.0",
 		"typeface-exo": "^0.0.61",
