--- a/packages/carrier-mobile-ionic/angular.json
+++ b/packages/carrier-mobile-ionic/angular.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "../../node_modules/@angular/cli/lib/config/schema.json",
+	"$schema": "./node_modules/@angular/cli/lib/config/schema.json",
 	"version": 1,
 	"defaultProject": "app",
 	"newProjectRoot": "projects",
@@ -32,6 +32,11 @@
 							{
 								"glob": "**/*.svg",
 								"input": "../../node_modules/ionicons/dist/ionicons/svg",
+								"output": "./svg"
+							},
+							{
+								"glob": "**/*.svg",
+								"input": "../../node_modules/@ionic/core/dist/ionic/svg",
 								"output": "./svg"
 							},
 							"src/manifest.json"
