--- a/packages/core/.env.template
+++ b/packages/core/.env.template
@@ -43,6 +43,8 @@ SETTING_INVITES_ENABLED=false
 FAKE_INVITE_CODE=8321
 
 SETTINGS_REGISTRATIONS_REQUIRED_ON_START=false
+ADMIN_PASSWORD_RESET=false
+FAKE_DATA_GENERATOR=false
 
 ARCGIS_CLIENT_ID=[SOME SORT OF STRING KEY]
 ARCGIS_CLIENT_SECRET=[SOME SORT OF STRING SECRET]
