--- a/packages/core/.env.template
+++ b/packages/core/.env.template
@@ -43,8 +43,12 @@ SETTING_INVITES_ENABLED=false
 FAKE_INVITE_CODE=8321
 
 SETTINGS_REGISTRATIONS_REQUIRED_ON_START=false
-ADMIN_PASSWORD_RESET=false
-FAKE_DATA_GENERATOR=false
+
+# Allows to reset Admin user Password
+ADMIN_PASSWORD_RESET=true
+
+# Enables Fake data (seed) generator
+FAKE_DATA_GENERATOR=true
 
 ARCGIS_CLIENT_ID=[SOME SORT OF STRING KEY]
 ARCGIS_CLIENT_SECRET=[SOME SORT OF STRING SECRET]
