--- a/package.json
+++ b/package.json
@@ -62,9 +62,100 @@
 	},
 	"resolutions": {},
     "dependencies": {				
+		"@angular/animations": "^9.1.1",
+		"@angular/common": "^9.1.1",
+		"@angular/compiler": "^9.1.1",
 		"@angular/core": "^9.1.1",
-        "rxjs": "^6.5.2",
-        "rxjs-compat": "^6.5.2"
+		"@angular/forms": "^9.1.1",
+		"@angular/language-service": "~9.1.1",
+		"@angular/platform-browser": "^9.1.1",
+		"@angular/platform-browser-dynamic": "^9.1.1",
+		"@angular/router": "^9.1.1",
+		"@angular/service-worker": "^9.1.1",		
+		"@ionic-native/barcode-scanner": "^5.23.0",
+		"@ionic-native/call-number": "^5.23.0",
+		"@ionic-native/camera": "^5.23.0",
+		"@ionic-native/core": "^5.23.0",
+		"@ionic-native/device": "^5.23.0",
+		"@ionic-native/dialogs": "^5.23.0",
+		"@ionic-native/geolocation": "^5.23.0",
+		"@ionic-native/globalization": "^5.23.0",
+		"@ionic-native/google-analytics": "^5.23.0",
+		"@ionic-native/google-maps": "~5.5.0",
+		"@ionic-native/in-app-browser": "^5.23.0",
+		"@ionic-native/intercom": "^5.23.0",
+		"@ionic-native/local-notifications": "^5.23.0",
+		"@ionic-native/mixpanel": "^5.23.0",
+		"@ionic-native/network": "^5.23.0",
+		"@ionic-native/splash-screen": "^5.23.0",
+		"@ionic-native/status-bar": "^5.23.0",
+		"@ionic-native/unique-device-id": "^5.23.0",
+		"@ionic-native/vibration": "^5.23.0",
+		"@ionic/angular": "^5.0.7",
+		"@ionic/pro": "^2.0.4",
+		"@ionic/storage": "^2.2.0",
+		"@ngx-progressbar/core": "^5.3.2",
+		"@ngx-translate/core": "^12.1.2",
+		"@ngx-translate/http-loader": "^4.0.0",
+		"apollo-angular": "^1.6.0",
+		"apollo-angular-link-http": "^1.7.0",
+		"apollo-cache-inmemory": "^1.6.2",
+		"apollo-client": "^2.6.2",
+		"apollo-link": "^1.2.11",
+		"apollo-link-context": "^1.0.17",
+		"apollo-link-ws": "^1.0.17",
+		"bootstrap": "^4.3.1",
+		"call-number": "^1.0.1",
+		"cordova-android": "^8.0.0",
+		"cordova-android-support-gradle-release": "^3.0.1",
+		"cordova-browser": "^6.0.0",
+		"cordova-plugin-androidx": "^1.0.2",
+		"cordova-plugin-androidx-adapter": "^1.1.0",
+		"cordova-plugin-appavailability": "^0.4.2",
+		"cordova-plugin-device": "^2.0.2",
+		"cordova-plugin-dialogs": "^2.0.1",
+		"cordova-plugin-geolocation": "^4.0.1",
+		"cordova-plugin-globalization": "^1.11.0",
+		"cordova-plugin-google-analytics": "^1.8.6",
+		"cordova-plugin-inappbrowser": "^3.0.0",
+		"cordova-plugin-intercom": "^8.0.0",
+		"cordova-plugin-ionic-keyboard": "^2.1.3",
+		"cordova-plugin-ionic-webview": "^4.0.0",
+		"cordova-plugin-mixpanel": "^4.5.2",
+		"cordova-plugin-splashscreen": "^5.0.2",
+		"cordova-plugin-statusbar": "^2.4.2",
+		"cordova-plugin-uniquedeviceid": "^1.3.2",
+		"cordova-plugin-vibration": "^3.1.1",
+		"cordova-plugin-whitelist": "^1.3.3",
+		"core-js": "^3.6.4",
+		"cryptiles": "^4.1.3",
+		"font-awesome": "^4.7.0",
+		"fstream": "^1.0.12",
+		"graphql": "^14.1.1",
+		"graphql-tag": "^2.10.1",
+		"handlebars": "^4.1.2",
+		"ionicons": "^4.5.8",
+		"jasmine": "^3.5.0",
+		"jsbarcode": "^3.11.0",
+		"lodash": "^4.17.15",
+		"lodash.mergewith": "^4.6.2",
+		"mx.ferreyra.callnumber": "0.0.2",
+		"neo-async": "^2.6.1",		
+		"phonegap-plugin-barcodescanner": "^8.0.1",		
+		"qrcode": "^1.4.1",
+		"reflect-metadata": "^0.1.13",
+		"rxjs": "^6.5.2",
+		"rxjs-compat": "^6.5.2",
+		"sass-loader": "^7.2.0",
+		"save": "^2.3.3",
+		"socket.io-client": "^2.2.0",
+		"stripe": "^7.0.0",
+		"subscriptions-transport-ws": "^0.9.16",
+		"swiper": "^4.5.0",
+		"tslib": "^1.10.0",
+		"uglify-js": "^3.6.0",
+		"uuid": "^3.3.2",
+		"zone.js": "~0.10.2"
     },
 	"devDependencies": {
 		"@commitlint/cli": "^8.1.0",
@@ -108,8 +199,7 @@
 		"conventional-changelog": "^3.1.8",
 		"conventional-changelog-cli": "^2.0.17",
 		"conventional-changelog-core": "^4.0.3",
-		"copy-webpack-plugin": "^5.0.5",
-		"core-js": "^3.6.4",
+		"copy-webpack-plugin": "^5.0.5",		
 		"coveralls": "^3.0.11",
 		"cpr": "^3.0.1",
 		"cross-env": "^6.0.3",
@@ -151,8 +241,7 @@
 		"lint-staged": "^10.0.9",
 		"mini-css-extract-plugin": "^0.9.0",
 		"ng-router-loader": "^2.1.0",
-		"ngc-webpack": "~4.1.2",
-		"node-sass": "^4.11.0",
+		"ngc-webpack": "~4.1.2",		
 		"nodemon": "^2.0.2",
 		"npm-check-updates": "^3.1.8",
 		"npm-run-all": "^4.1.5",
@@ -166,8 +255,7 @@
 		"protractor": "^5.4.2",
 		"require-directory": "^2.1.1",
 		"rimraf": "^2.6.3",
-		"rxjs-tslint": "0.1.7",
-		"sass-loader": "^7.2.0",
+		"rxjs-tslint": "0.1.7",		
 		"script-ext-html-webpack-plugin": "^2.1.4",
 		"snyk": "^1.305.0",
 		"source-map-loader": "^0.2.4",
@@ -180,8 +268,7 @@
 		"to-string-loader": "^1.1.6",
 		"ts-jest": "^24.0.2",
 		"ts-loader": "^6.2.2",
-		"ts-node": "^8.8.1",
-		"tslib": "^1.10.0",
+		"ts-node": "^8.8.1",		
 		"tslint": "^6.1.0",
 		"tslint-config-prettier": "^1.18.0",
 		"tslint-loader": "^3.6.0",
