--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,15 +56,22 @@ aliases:
           unzip commandlinetools-linux-6609375_latest.zip -d cmdline-tools
           sudo mv cmdline-tools $ANDROID_HOME/
           export PATH=$ANDROID_HOME/cmdline-tools/tools/bin:$PATH
+          echo "Accepting SDK Licenses"
           yes | sdkmanager --licenses
+          echo "Updating SDK"
           yes | sdkmanager --update
-          yes | sdkmanager "tools"
-          yes | sdkmanager "platform-tools"
-          yes | sdkmanager "platforms;android-28"
-          yes | sdkmanager "platforms;android-28"
-          yes | sdkmanager "platforms;android-29"
-          yes | sdkmanager "build-tools;28.0.3"
-          yes | sdkmanager "build-tools;29.0.3"
+          echo "Installing SDK tools"
+          sdkmanager "tools"
+          echo "Installing SDK platform-tools"
+          sdkmanager "platform-tools"
+          echo "Installing SDK platforms;android-28"
+          sdkmanager "platforms;android-28"
+          echo "Installing SDK platforms;android-29"          
+          sdkmanager "platforms;android-29"
+          echo "Installing SDK build-tools;28.0.3"
+          sdkmanager "build-tools;28.0.3"
+          echo "Installing SDK build-tools;29.0.3"
+          sdkmanager "build-tools;29.0.3"
 
 defaults: &defaults
     # put here anything which is common between all jobs
